--- a/cloud-user.yml
+++ b/cloud-user.yml
@@ -4,3 +4,8 @@ spring:
     host: localhost
     database: 1
     password: 123456
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
