--- a/cloud-user.yml
+++ b/cloud-user.yml
@@ -1,11 +1,2 @@
-spring:
-  redis:
-    port: 6379
-    host: localhost
-    database: 1
-    password: 123456
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
+test:
+  name: lisi
